--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <div id="gui-container"></div>
       </div>
       <div id="waiting-container">
-        <h1>Loading...</h1>
+        <img
+          src="/src/assets//images/loading-donut-removebg-preview.png"
+          alt="loading"
+        />
       </div>
     </div>
   </body>
