feat: add color settings and optimize performance
- Add settings container with color options in UI
- Implement tab visibility handling to pause/resume animations
- Move 3D components to dedicated worlds folder
- Rename gui-container to debug-container
- Add user-select: none to UI containers
- Update project structure and imports
- Add new color variables and styles

--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
   </head>
   <body>
     <div id="app">
+      <!-- canvas container -->
       <div id="canvas-container">
-        <div id="gui-container"></div>
+        <!-- debug container -->
+        <div id="debug-container"></div>
       </div>
+      <!-- waiting container -->
       <div id="waiting-container">
         <img
           src="/src/assets//images/loading-donut-removebg-preview.png"
           alt="loading"
         />
+      </div>
+      <!-- settings container -->
+      <div id="settings-container">
+        <div id="setting-color-bleuMarine" class="is-active"></div>
+        <div id="setting-color-grisAnthracite"></div>
+        <div id="setting-color-bleuNuit"></div>
+        <div id="setting-color-noir"></div>
+        <div id="setting-color-bleuFonce"></div>
       </div>
     </div>
   </body>
