feat: add color settings UI and background color transition
- Refactor settings container HTML structure with proper ARIA roles
- Add UI class integration for color settings management
- Implement background color transition functionality
- Update SCSS styles for settings buttons
- Mark fullscreen and color change features as completed in todo list

--- a/index.html
+++ b/index.html
@@ -23,12 +23,24 @@
         />
       </div>
       <!-- settings container -->
-      <div id="settings-container">
-        <div id="setting-color-bleuMarine" class="is-active"></div>
-        <div id="setting-color-grisAnthracite"></div>
-        <div id="setting-color-bleuNuit"></div>
-        <div id="setting-color-noir"></div>
-        <div id="setting-color-bleuFonce"></div>
+      <div id="settings" class="settings">
+        <div
+          role="button"
+          class="setting-bleuMarine is-active"
+          data-color="bleuMarine"
+        ></div>
+        <div
+          role="button"
+          class="setting-grisAnthracite"
+          data-color="grisAnthracite"
+        ></div>
+        <div role="button" class="setting-bleuNuit" data-color="bleuNuit"></div>
+        <div role="button" class="setting-noir" data-color="noir"></div>
+        <div
+          role="button"
+          class="setting-bleuFonce"
+          data-color="bleuFonce"
+        ></div>
       </div>
     </div>
   </body>
